--- a/photocalendar/templates/delphinus/delphinus.css
+++ b/photocalendar/templates/delphinus/delphinus.css
@@ -181,3 +181,69 @@ hr {
 .day-sunday {
 	color: red;
 }
+
+/**********************************************************************
+* L A S T   P A G E
+**********************************************************************/
+#last-page {
+	font-weight: bold;
+}
+
+#last-page-year {
+	padding-top: 10%;
+	font-size: 300%;
+	/* centering */
+	width: 100%;
+	text-align: center;
+	margin-bottom: 3%; /* space after */
+}
+
+.last-page-months {
+	font-size: 55%;
+	height: 25%;
+	margin-bottom: 8%; /* space after */
+	text-align-last: justify; /* justify of content */
+	/* centering */
+	width: 92%;
+	margin-left: 4%;
+	margin-right: 4%;
+}
+
+.last-page-month {
+	display: inline-block;
+	width: 15%;
+	height: 100%;
+	text-align-last: center;
+	vertical-align: top; /* vertical top alignment */
+}
+
+.last-page-month-name {
+	width: 100%;
+	height: 15%;
+}
+
+.last-page-month-line {
+	width: 100%;
+	height: 13%;
+	text-align-last: left;
+}
+
+.last-page-month-line-1 {
+	margin-bottom: 4%;
+}
+
+.last-page-month-element {
+	display: inline-block;
+	width: 14%;
+	margin-right: -2%;
+	text-align-last: center;
+}
+
+/* red numbers */
+.last-page-month-element-sunday {
+	color: red;
+}
+
+.last-page-month-element-is-public-holiday {
+	color: red;
+}
